tests/invalid/varuplevel.nim
# Count: 1
# Negative count: 1

var a: seq[int]
a.add(1)
let b: int = 3
